cmake_minimum_required(VERSION 2.6)
PROJECT(intrinsic-noise-analyzer)

#
# Register own CMake extensions:
#
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)


#
# Get default directories under Linux
#
IF(UNIX AND NOT APPLE)
INCLUDE(GNUInstallDirs)
ELSE()
SET(CMAKE_INSTALL_LIBDIR "lib")
ENDIF(UNIX AND NOT APPLE)


#
# Search for libraries
#
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR})

FIND_PACKAGE(Ginac REQUIRED)
FIND_PACKAGE(LibSBML REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(LLVM)


#
# Disable OpenMP on MacOSX.
#
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
SET(OpenMP_CXX_FLAGS "")
SET(OpenMP_C_FLAGS "")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")


#
# Make sure libina can be found
#
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)


#
# Used libaries:
#
set(LIBS ${LIBS} ${GINAC_LIBRARIES} ${LIBSBML_LIBRARIES} m pthread)

#
# Used headers:
#
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIRS} ${GINAC_INCLUDE_DIRS} ${LIBSBML_INCLUDE_DIRS})

#
# Compiler flags:
#
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -Wall -frtti -fexceptions -Wno-unknown-pragmas")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${OpenMP_CXX_FLAGS} -O0 -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OpenMP_CXX_FLAGS} -O2")

set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT} ${OpenMP_CXX_FLAGS})
set(CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS_INIT} ${OpenMP_CXX_FLAGS})
set(CMAKE_MODULE_LINKER_FLAGS ${CMAKE_MODULE_LINKER_FLAGS_INIT} ${OpenMP_CXX_FLAGS})


#
# Define flags, libs etc if LLVM is present:
#
IF(LLVM_FOUND)
MESSAGE(STATUS "LLVM support: yes")
SET(WITH_EXECUTION_ENGINE_LLVM ON)
ADD_DEFINITIONS(-DWITH_EXECUTION_ENGINE_LLVM=1)
SET(LIBS ${LIBS} ${LLVM_LIBRARIES})
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})
ADD_DEFINITIONS(-D_DEBUG -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS_INIT} ${LLVM_LD_FLAGS}")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS_INIT} ${LLVM_LD_FLAGS}")
set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS_INIT} ${LLVM_LD_FLAGS}")
else(LLVM_FOUND)
MESSAGE(STATUS "LLVM support: no")
SET(WITH_EXECUTION_ENGINE_LLVM OFF)
ADD_DEFINITIONS(-DWITH_EXECUTION_ENGINE_LLVM=0)
ENDIF(LLVM_FOUND)


#
# traverse into source tree:
#
add_subdirectory(lib)
add_subdirectory(cli)
add_subdirectory(app)
add_subdirectory(test)

#
# Source distribution packages:
#
set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "2")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_SOURCE_GENERATOR "TGZ")
set(CPACK_SOURCE_PACKAGE_FILE_NAME
  "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_SOURCE_IGNORE_FILES
  "/build/;/doc/;/dist/;/.git/;/.svn/;~$;${CPACK_SOURCE_IGNORE_FILES}")
include(CPack)


#
# Install logo and .desktop file under Linux:
#
IF(UNIX AND NOT APPLE)
  INSTALL(FILES shared/IntrinsicNoiseAnalyzer.png
          DESTINATION share/icons)
  INSTALL(FILES shared/IntrinsicNoiseAnalyzer.desktop
          DESTINATION share/applications)
ENDIF(UNIX AND NOT APPLE)


